Pack mouse move/drag coords into event token; drop debug prints